# PaperMCP

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
claude-code/: SKILL.md
scripts/: discover_mcps.py  evaluate_candidates.py
src/paper_mcp/: __init__.py  __main__.py  cli.py  server.py
src/paper_mcp/sources/: __init__.py  acm.py  arxiv.py  base_search.py  biorxiv.py  chemrxiv.py  citeseerx.py  core.py  crossref.py  dblp.py  doaj.py  europepmc.py  hal.py  huggingface.py  iacr.py  ieee.py  inspirehep.py  medrxiv.py  oaipmh.py  openaire.py  openalex.py  openreview.py  paperswithcode.py  pmc.py  pubmed.py  scholar.py  semanticscholar.py  ssrn.py  unified.py  unpaywall.py  zenodo.py
tests/: test_sources_smoke.py
